src/test/deca/syntax/invalid/not_provided/include_cycle_b.decah
#include "include_cycle_a.decah"